# BaseTemplate_DjangoDRF

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
src/: conftest.py  manage.py
src/app/: views.py
src/app/settings/: .env.example  __init__.py
src/app/settings/components/: auth.py  base.py  db.py  i18n.py  installed_apps.py  logging.py  middleware.py  rest_framework.py  simple_jwt.py  static.py  storage.py
src/app/settings/environments/: development.py  production.py  testing.py
src/app/test/: api_client.py
src/app/tests/: test_base_view.py
src/app/urls/: __init__.py  docs.py  v1.py
src/tasks/api/: urls.py  views.py
src/tasks/api/serializers/: __init__.py  task.py  user.py
src/tasks/migrations/: 0001_create_task_model.py  0002_fix_tasks_model_meta.py
src/tasks/models/: __init__.py  task.py
src/tasks/tests/: conftest.py  test_tasks_api.py  test_user_tasks_list.py  test_users_api.py
src/utils/: middleware.py  pagination.py
