[tool.poetry]
name = "djangotutorial"
version = "0.1.0"
description = ""
authors = ["Ignat Balakirev <ivbignal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
django-split-settings = "^1.1.0"
django-environ = "^0.8.1"
whitenoise = "^6.0.0"
django-cors-headers = "^3.11.0"
django-filter = "^21.1"
django-simple-history = "^3.0.0"
djangorestframework-simplejwt = "^5.1.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"
drf-yasg = "^1.20.0"

# tests
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
mixer = "^7.2.0"
requests-mock = "^1.9.3"
pytest-xdist = "^2.5.0"
freezegun = "^1.1.0"
dj-inmemorystorage = "^2.1.0"
pytest-env = "^0.6.2"

# linters
pre-commit = "^2.17.0"
mypy = "^0.812"
django-stubs = "^1.7.0"
flake8-absolute-import = "^1.0"
flake8-bugbear = "^21.11.29"
flake8-commas = "^2.1.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-isort = "^4.1.1"
flake8-print = "^4.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6.0"
flake8-variables-names = "^0.0.4"
flake8-quotes = "^3.3.1"
flake8-tidy-imports = "^4.6.0"
flake8-comprehensions = "^3.8.0"
flake8-class-attributes-order = "^0.1.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-django = "^1.1.2"
flake8-fixme = "^1.1.1"
flake8-mock = "^0.3"
flake8-multiline-containers = "^0.0.18"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-pie = "^0.15.0"
flake8-simplify = "^0.15.1"
flake8-use-fstring = "^1.3"
flake8-walrus = "^1.1.0"
darglint = "^1.8.1"
flake8-patch = "^0.1.0"
flake8-broken-line = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

